--- a/pkg/dyninst/irgen/testdata/snapshot/simple/arch=amd64,toolchain=go1.24.3.yaml
+++ b/pkg/dyninst/irgen/testdata/snapshot/simple/arch=amd64,toolchain=go1.24.3.yaml
@@ -4,73 +4,82 @@ Probes:
       Kind: ProbeKindLog
       Version: 0
       Tags: []
-      Subprogram: {subprogram: 1}
+      Subprogram: {subprogram: 2}
       Events:
         - ID: 1
-          Type: 39 EventRootType ProbeEvent
-          InjectionPCs: ["0x491c8a"]
+          Type: 39 EventRootType Probe[main.mapArg]
+          InjectionPCs: ["0x491cea"]
           Condition: null
       Snapshot: false
     - ID: c
       Kind: ProbeKindLog
       Version: 0
       Tags: []
-      Subprogram: {subprogram: 2}
+      Subprogram: {subprogram: 3}
       Events:
         - ID: 2
-          Type: 40 EventRootType ProbeEvent
-          InjectionPCs: ["0x491cf3"]
+          Type: 40 EventRootType Probe[main.bigMapArg]
+          InjectionPCs: ["0x491d53"]
           Condition: null
       Snapshot: false
     - ID: d
       Kind: ProbeKindLog
       Version: 0
       Tags: []
-      Subprogram: {subprogram: 3}
+      Subprogram: {subprogram: 4}
       Events:
         - ID: 3
-          Type: 41 EventRootType ProbeEvent
-          InjectionPCs: ["0x491e2a"]
+          Type: 41 EventRootType Probe[main.stringArg]
+          InjectionPCs: ["0x491e8a"]
+          Condition: null
+      Snapshot: false
+    - ID: e
+      Kind: ProbeKindLog
+      Version: 0
+      Tags: []
+      Subprogram: {subprogram: 1}
+      Events:
+        - ID: 4
+          Type: 42 EventRootType Probe[main.inlined]
+          InjectionPCs: ["0x491f8a", "0x491c66"]
           Condition: null
       Snapshot: false
 Subprograms:
-    - ID: 1
+    - ID: 2
       Name: main.mapArg
-      OutOfLinePCRanges: [0x491c80..0x491cd6]
+      OutOfLinePCRanges: [0x491ce0..0x491d36]
       InlinePCRanges: []
       Variables:
         - Name: m
-          Type: 1 GoMapType map[string]int
+          Type: 2 GoMapType map[string]int
           Locations:
-            - Range: 0x491c80..0x491cad
+            - Range: 0x491ce0..0x491d0d
               Pieces: [{Size: 0, InReg: true, StackOffset: 0, Register: 0}]
           IsParameter: true
           IsReturn: false
-      Lines: []
-    - ID: 2
+    - ID: 3
       Name: main.bigMapArg
-      OutOfLinePCRanges: [0x491ce0..0x491d9b]
+      OutOfLinePCRanges: [0x491d40..0x491dfb]
       InlinePCRanges: []
       Variables:
         - Name: m
           Type: 19 GoMapType map[string]main.bigStruct
           Locations:
-            - Range: 0x491ce0..0x491d13
+            - Range: 0x491d40..0x491d73
               Pieces: [{Size: 0, InReg: true, StackOffset: 0, Register: 0}]
-            - Range: 0x491d13..0x491d9b
+            - Range: 0x491d73..0x491dfb
               Pieces: [{Size: 0, InReg: false, StackOffset: 0, Register: 0}]
           IsParameter: true
           IsReturn: false
-      Lines: []
-    - ID: 3
+    - ID: 4
       Name: main.stringArg
-      OutOfLinePCRanges: [0x491e20..0x491e91]
+      OutOfLinePCRanges: [0x491e80..0x491ef1]
       InlinePCRanges: []
       Variables:
         - Name: s
           Type: 17 GoStringHeaderType string
           Locations:
-            - Range: 0x491e20..0x491e3e
+            - Range: 0x491e80..0x491e9e
               Pieces:
                 - Size: 8
                   InReg: true
@@ -82,115 +91,128 @@ Subprograms:
                   Register: 3
           IsParameter: true
           IsReturn: false
-      Lines: []
+    - ID: 1
+      Name: main.inlined
+      OutOfLinePCRanges: [0x491f80..0x491fe2]
+      InlinePCRanges: [[0x491c66..0x491cb3]]
+      Variables:
+        - Name: x
+          Type: 1 BaseType int
+          Locations:
+            - Range: 0x491c66..0x491cb3
+              Pieces: []
+            - Range: 0x491f80..0x491f99
+              Pieces: [{Size: 8, InReg: true, StackOffset: 0, Register: 0}]
+          IsParameter: true
+          IsReturn: false
 Types:
-    - __kind: GoMapType
+    - __kind: BaseType
       ID: 1
+      Name: int
+      ByteSize: 8
+      GoRuntimeType: 39552
+      GoKind: 2
+    - __kind: GoMapType
+      ID: 2
       Name: map[string]int
       GoRuntimeType: 63488
       GoKind: 21
-      HeaderType: 3 GoSwissMapHeaderType map<string,int>
+      HeaderType: 4 GoSwissMapHeaderType map<string,int>
     - __kind: PointerType
-      ID: 2
+      ID: 3
       Name: '*map<string,int>'
       ByteSize: 8
-      Pointee: 3 GoSwissMapHeaderType map<string,int>
+      Pointee: 4 GoSwissMapHeaderType map<string,int>
     - __kind: GoSwissMapHeaderType
-      ID: 3
+      ID: 4
       Name: map<string,int>
       ByteSize: 48
       GoKind: 25
       Fields:
         - Name: used
           Offset: 0
-          Type: 4 BaseType uint64
+          Type: 5 BaseType uint64
         - Name: seed
           Offset: 8
-          Type: 5 BaseType uintptr
+          Type: 6 BaseType uintptr
         - Name: dirPtr
           Offset: 16
-          Type: 6 PointerType **table<string,int>
+          Type: 7 PointerType **table<string,int>
         - Name: dirLen
           Offset: 24
-          Type: 11 BaseType int
+          Type: 1 BaseType int
         - Name: globalDepth
           Offset: 32
-          Type: 10 BaseType uint8
+          Type: 11 BaseType uint8
         - Name: globalShift
           Offset: 33
-          Type: 10 BaseType uint8
+          Type: 11 BaseType uint8
         - Name: writing
           Offset: 34
-          Type: 10 BaseType uint8
+          Type: 11 BaseType uint8
         - Name: clearSeq
           Offset: 40
-          Type: 4 BaseType uint64
+          Type: 5 BaseType uint64
       TablePtrSliceType: 33 GoSliceDataType []*table<string,int>.array
       GroupType: 14 StructureType noalg.map.group[string]int
     - __kind: BaseType
-      ID: 4
+      ID: 5
       Name: uint64
       ByteSize: 8
       GoRuntimeType: 39488
       GoKind: 11
     - __kind: BaseType
-      ID: 5
+      ID: 6
       Name: uintptr
       ByteSize: 8
       GoRuntimeType: 39680
       GoKind: 12
     - __kind: PointerType
-      ID: 6
+      ID: 7
       Name: '**table<string,int>'
       ByteSize: 8
-      Pointee: 7 PointerType *table<string,int>
+      Pointee: 8 PointerType *table<string,int>
     - __kind: PointerType
-      ID: 7
+      ID: 8
       Name: '*table<string,int>'
       ByteSize: 8
-      Pointee: 8 StructureType table<string,int>
+      Pointee: 9 StructureType table<string,int>
     - __kind: StructureType
-      ID: 8
+      ID: 9
       Name: table<string,int>
       ByteSize: 32
       GoKind: 25
       Fields:
         - Name: used
           Offset: 0
-          Type: 9 BaseType uint16
+          Type: 10 BaseType uint16
         - Name: capacity
           Offset: 2
-          Type: 9 BaseType uint16
+          Type: 10 BaseType uint16
         - Name: growthLeft
           Offset: 4
-          Type: 9 BaseType uint16
+          Type: 10 BaseType uint16
         - Name: localDepth
           Offset: 6
-          Type: 10 BaseType uint8
+          Type: 11 BaseType uint8
         - Name: index
           Offset: 8
-          Type: 11 BaseType int
+          Type: 1 BaseType int
         - Name: groups
           Offset: 16
           Type: 12 GoSwissMapGroupsType groupReference<string,int>
     - __kind: BaseType
-      ID: 9
+      ID: 10
       Name: uint16
       ByteSize: 2
       GoRuntimeType: 39232
       GoKind: 9
     - __kind: BaseType
-      ID: 10
+      ID: 11
       Name: uint8
       ByteSize: 1
       GoRuntimeType: 39104
       GoKind: 8
-    - __kind: BaseType
-      ID: 11
-      Name: int
-      ByteSize: 8
-      GoRuntimeType: 39552
-      GoKind: 2
     - __kind: GoSwissMapGroupsType
       ID: 12
       Name: groupReference<string,int>
@@ -202,7 +224,7 @@ Types:
           Type: 13 PointerType *noalg.map.group[string]int
         - Name: lengthMask
           Offset: 8
-          Type: 4 BaseType uint64
+          Type: 5 BaseType uint64
       GroupType: 14 StructureType noalg.map.group[string]int
       GroupSliceType: 34 GoSliceDataType []noalg.map.group[string]int.array
     - __kind: PointerType
@@ -219,7 +241,7 @@ Types:
       Fields:
         - Name: ctrl
           Offset: 0
-          Type: 4 BaseType uint64
+          Type: 5 BaseType uint64
         - Name: slots
           Offset: 8
           Type: 15 ArrayType noalg.[8]struct { key string; elem int }
@@ -244,7 +266,7 @@ Types:
           Type: 17 GoStringHeaderType string
         - Name: elem
           Offset: 16
-          Type: 11 BaseType int
+          Type: 1 BaseType int
     - __kind: GoStringHeaderType
       ID: 17
       Name: string
@@ -257,7 +279,7 @@ Types:
           Type: 36 PointerType *string.str
         - Name: len
           Offset: 8
-          Type: 11 BaseType int
+          Type: 1 BaseType int
       Data: 35 GoStringDataType string.str
     - __kind: PointerType
       ID: 18
@@ -265,7 +287,7 @@ Types:
       ByteSize: 8
       GoRuntimeType: 26976
       GoKind: 22
-      Pointee: 10 BaseType uint8
+      Pointee: 11 BaseType uint8
     - __kind: GoMapType
       ID: 19
       Name: map[string]main.bigStruct
@@ -285,28 +307,28 @@ Types:
       Fields:
         - Name: used
           Offset: 0
-          Type: 4 BaseType uint64
+          Type: 5 BaseType uint64
         - Name: seed
           Offset: 8
-          Type: 5 BaseType uintptr
+          Type: 6 BaseType uintptr
         - Name: dirPtr
           Offset: 16
           Type: 22 PointerType **table<string,main.bigStruct>
         - Name: dirLen
           Offset: 24
-          Type: 11 BaseType int
+          Type: 1 BaseType int
         - Name: globalDepth
           Offset: 32
-          Type: 10 BaseType uint8
+          Type: 11 BaseType uint8
         - Name: globalShift
           Offset: 33
-          Type: 10 BaseType uint8
+          Type: 11 BaseType uint8
         - Name: writing
           Offset: 34
-          Type: 10 BaseType uint8
+          Type: 11 BaseType uint8
         - Name: clearSeq
           Offset: 40
-          Type: 4 BaseType uint64
+          Type: 5 BaseType uint64
       TablePtrSliceType: 37 GoSliceDataType []*table<string,main.bigStruct>.array
       GroupType: 27 StructureType noalg.map.group[string]main.bigStruct
     - __kind: PointerType
@@ -327,19 +349,19 @@ Types:
       Fields:
         - Name: used
           Offset: 0
-          Type: 9 BaseType uint16
+          Type: 10 BaseType uint16
         - Name: capacity
           Offset: 2
-          Type: 9 BaseType uint16
+          Type: 10 BaseType uint16
         - Name: growthLeft
           Offset: 4
-          Type: 9 BaseType uint16
+          Type: 10 BaseType uint16
         - Name: localDepth
           Offset: 6
-          Type: 10 BaseType uint8
+          Type: 11 BaseType uint8
         - Name: index
           Offset: 8
-          Type: 11 BaseType int
+          Type: 1 BaseType int
         - Name: groups
           Offset: 16
           Type: 25 GoSwissMapGroupsType groupReference<string,main.bigStruct>
@@ -354,7 +376,7 @@ Types:
           Type: 26 PointerType *noalg.map.group[string]main.bigStruct
         - Name: lengthMask
           Offset: 8
-          Type: 4 BaseType uint64
+          Type: 5 BaseType uint64
       GroupType: 27 StructureType noalg.map.group[string]main.bigStruct
       GroupSliceType: 38 GoSliceDataType []noalg.map.group[string]main.bigStruct.array
     - __kind: PointerType
@@ -371,7 +393,7 @@ Types:
       Fields:
         - Name: ctrl
           Offset: 0
-          Type: 4 BaseType uint64
+          Type: 5 BaseType uint64
         - Name: slots
           Offset: 8
           Type: 28 ArrayType noalg.[8]struct { key string; elem *main.bigStruct }
@@ -413,25 +435,25 @@ Types:
       Fields:
         - Name: Field1
           Offset: 0
-          Type: 11 BaseType int
+          Type: 1 BaseType int
         - Name: Field2
           Offset: 8
-          Type: 11 BaseType int
+          Type: 1 BaseType int
         - Name: Field3
           Offset: 16
-          Type: 11 BaseType int
+          Type: 1 BaseType int
         - Name: Field4
           Offset: 24
-          Type: 11 BaseType int
+          Type: 1 BaseType int
         - Name: Field5
           Offset: 32
-          Type: 11 BaseType int
+          Type: 1 BaseType int
         - Name: Field6
           Offset: 40
-          Type: 11 BaseType int
+          Type: 1 BaseType int
         - Name: Field7
           Offset: 48
-          Type: 11 BaseType int
+          Type: 1 BaseType int
         - Name: data
           Offset: 56
           Type: 32 ArrayType [128]uint8
@@ -443,12 +465,12 @@ Types:
       GoKind: 17
       Count: 128
       HasCount: true
-      Element: 10 BaseType uint8
+      Element: 11 BaseType uint8
     - __kind: GoSliceDataType
       ID: 33
       Name: '[]*table<string,int>.array'
       ByteSize: 2048
-      Element: 7 PointerType *table<string,int>
+      Element: 8 PointerType *table<string,int>
     - __kind: GoSliceDataType
       ID: 34
       Name: '[]noalg.map.group[string]int.array'
@@ -475,22 +497,22 @@ Types:
       Element: 27 StructureType noalg.map.group[string]main.bigStruct
     - __kind: EventRootType
       ID: 39
-      Name: ProbeEvent
+      Name: Probe[main.mapArg]
       ByteSize: 1
       PresenseBitsetSize: 1
       Expressions:
         - Name: m
           Offset: 1
           Expression:
-            Type: 1 GoMapType map[string]int
+            Type: 2 GoMapType map[string]int
             Operations:
                 - __kind: LocationOp
-                  Variable: {subprogram: 1, index: 0, name: m}
+                  Variable: {subprogram: 2, index: 0, name: m}
                   Offset: 0
                   ByteSize: 0
     - __kind: EventRootType
       ID: 40
-      Name: ProbeEvent
+      Name: Probe[main.bigMapArg]
       ByteSize: 1
       PresenseBitsetSize: 1
       Expressions:
@@ -500,12 +522,12 @@ Types:
             Type: 19 GoMapType map[string]main.bigStruct
             Operations:
                 - __kind: LocationOp
-                  Variable: {subprogram: 2, index: 0, name: m}
+                  Variable: {subprogram: 3, index: 0, name: m}
                   Offset: 0
                   ByteSize: 0
     - __kind: EventRootType
       ID: 41
-      Name: ProbeEvent
+      Name: Probe[main.stringArg]
       ByteSize: 17
       PresenseBitsetSize: 1
       Expressions:
@@ -515,7 +537,22 @@ Types:
             Type: 17 GoStringHeaderType string
             Operations:
                 - __kind: LocationOp
-                  Variable: {subprogram: 3, index: 0, name: s}
+                  Variable: {subprogram: 4, index: 0, name: s}
                   Offset: 0
                   ByteSize: 16
-MaxTypeID: 41
+    - __kind: EventRootType
+      ID: 42
+      Name: Probe[main.inlined]
+      ByteSize: 9
+      PresenseBitsetSize: 1
+      Expressions:
+        - Name: x
+          Offset: 1
+          Expression:
+            Type: 1 BaseType int
+            Operations:
+                - __kind: LocationOp
+                  Variable: {subprogram: 1, index: 0, name: x}
+                  Offset: 0
+                  ByteSize: 8
+MaxTypeID: 42
