--- a/test/static/static_quality_gates.yml
+++ b/test/static/static_quality_gates.yml
@@ -47,26 +47,26 @@ static_quality_gate_docker_agent_jmx_arm64:
   max_on_disk_size: 974.41 MiB
   max_on_wire_size: 321.97 MiB
 static_quality_gate_docker_agent_windows1809:
-  max_on_disk_size: 1.45 GiB
+  max_on_disk_size: 1488 MiB
   max_on_wire_size: 488.95 MiB
 static_quality_gate_docker_agent_windows1809_core:
-  max_on_disk_size: 6.07 GiB
-  max_on_wire_size: 2.0 GiB
+  max_on_disk_size: 6218 MiB
+  max_on_wire_size: 1907.85 MiB
 static_quality_gate_docker_agent_windows1809_core_jmx:
   max_on_disk_size: 6.19 GiB
-  max_on_wire_size: 2.0 GiB
+  max_on_wire_size: 1907.85 MiB
 static_quality_gate_docker_agent_windows1809_jmx:
-  max_on_disk_size: 1.57 GiB
+  max_on_disk_size: 1609.5 MiB
   max_on_wire_size: 531.32 MiB
 static_quality_gate_docker_agent_windows2022:
-  max_on_disk_size: 1.47 GiB
+  max_on_disk_size: 1507 MiB
   max_on_wire_size: 501.7 MiB
 static_quality_gate_docker_agent_windows2022_core:
-  max_on_disk_size: 6.05 GiB
-  max_on_wire_size: 2.0 GiB
+  max_on_disk_size: 6311 MiB
+  max_on_wire_size: 1907.85 MiB
 static_quality_gate_docker_agent_windows2022_core_jmx:
-  max_on_disk_size: 6.16 GiB
-  max_on_wire_size: 2.0 GiB
+  max_on_disk_size: 5875 MiB
+  max_on_wire_size: 1907.85 MiB
 static_quality_gate_docker_agent_windows2022_jmx:
   max_on_disk_size: 1.59 GiB
   max_on_wire_size: 543.98 MiB
