--- a/pkg/config/config_template.yaml
+++ b/pkg/config/config_template.yaml
@@ -1038,6 +1038,12 @@ api_key:
   #
   # batch_wait: 5
 
+  ## @param close_timeout - integer - optional - default: 60
+  ## @env DD_LOGS_CONFIG_CLOSE_TIMEOUT - integer - optional - default: 60
+  ## The maximum number of seconds the agent will spend reading from a file after it has been rotated.
+  #
+  # close_timeout: 60
+
   ## @param open_files_limit - integer - optional - default: 500
   ## @env DD_LOGS_CONFIG_OPEN_FILES_LIMIT - integer - optional - default: 500
   ## The maximum number of files that can be tailed in parallel.
