--- a/.gitlab/packaging/rpm.yml
+++ b/.gitlab/packaging/rpm.yml
@@ -132,6 +132,20 @@ ot_agent_rpm-arm64:
     DD_PROJECT: otel-agent
     PACKAGE_REQUIRED_FILES_LIST: ""
 
+ot_agent_suse_rpm-amd64:
+  extends: [.package_suse_rpm_common, .package_rpm_x86]
+  needs: ["datadog-otel-agent-x64"]
+  variables:
+    DD_PROJECT: otel-agent
+    PACKAGE_REQUIRED_FILES_LIST: ""
+
+ot_agent_suse_rpm-arm64:
+  extends: [.package_suse_rpm_common, .package_rpm_arm64]
+  needs: ["datadog-otel-agent-arm64"]
+  variables:
+    DD_PROJECT: otel-agent
+    PACKAGE_REQUIRED_FILES_LIST: ""
+
 installer_rpm-arm64:
   extends: [.package_rpm_common, .package_rpm_arm64]
   needs: ["installer-arm64"]
