--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -167,32 +167,32 @@ variables:
   # Build images versions
   # To use images from datadog-agent-buildimages dev branches, set the corresponding
   # SUFFIX variable to
-  CI_IMAGE_BTF_GEN: v67503855-0c93f922
-  CI_IMAGE_BTF_GEN_SUFFIX: ""
-  CI_IMAGE_DEB_X64: v67503855-0c93f922
-  CI_IMAGE_DEB_X64_SUFFIX: ""
-  CI_IMAGE_DEB_ARM64: v67503855-0c93f922
-  CI_IMAGE_DEB_ARM64_SUFFIX: ""
-  CI_IMAGE_DEB_ARMHF: v67503855-0c93f922
-  CI_IMAGE_DEB_ARMHF_SUFFIX: ""
-  CI_IMAGE_DOCKER_X64: v67503855-0c93f922
-  CI_IMAGE_DOCKER_X64_SUFFIX: ""
-  CI_IMAGE_DOCKER_ARM64: v67503855-0c93f922
-  CI_IMAGE_DOCKER_ARM64_SUFFIX: ""
-  CI_IMAGE_GITLAB_AGENT_DEPLOY: v67503855-0c93f922
-  CI_IMAGE_GITLAB_AGENT_DEPLOY_SUFFIX: ""
-  CI_IMAGE_LINUX_GLIBC_2_17_X64: v67503855-0c93f922
-  CI_IMAGE_LINUX_GLIBC_2_17_X64_SUFFIX: ""
-  CI_IMAGE_LINUX_GLIBC_2_23_ARM64: v67503855-0c93f922
-  CI_IMAGE_LINUX_GLIBC_2_23_ARM64_SUFFIX: ""
-  CI_IMAGE_RPM_X64: v67503855-0c93f922
-  CI_IMAGE_RPM_X64_SUFFIX: ""
-  CI_IMAGE_RPM_ARM64: v67503855-0c93f922
-  CI_IMAGE_RPM_ARM64_SUFFIX: ""
-  CI_IMAGE_RPM_ARMHF: v67503855-0c93f922
-  CI_IMAGE_RPM_ARMHF_SUFFIX: ""
-  CI_IMAGE_WIN_LTSC2022_X64: v67503855-0c93f922
-  CI_IMAGE_WIN_LTSC2022_X64_SUFFIX: ""
+  CI_IMAGE_BTF_GEN: v67809676-c3ba6add
+  CI_IMAGE_BTF_GEN_SUFFIX: "_test_only"
+  CI_IMAGE_DEB_X64: v67809676-c3ba6add
+  CI_IMAGE_DEB_X64_SUFFIX: "_test_only"
+  CI_IMAGE_DEB_ARM64: v67809676-c3ba6add
+  CI_IMAGE_DEB_ARM64_SUFFIX: "_test_only"
+  CI_IMAGE_DEB_ARMHF: v67809676-c3ba6add
+  CI_IMAGE_DEB_ARMHF_SUFFIX: "_test_only"
+  CI_IMAGE_DOCKER_X64: v67809676-c3ba6add
+  CI_IMAGE_DOCKER_X64_SUFFIX: "_test_only"
+  CI_IMAGE_DOCKER_ARM64: v67809676-c3ba6add
+  CI_IMAGE_DOCKER_ARM64_SUFFIX: "_test_only"
+  CI_IMAGE_GITLAB_AGENT_DEPLOY: v67809676-c3ba6add
+  CI_IMAGE_GITLAB_AGENT_DEPLOY_SUFFIX: "_test_only"
+  CI_IMAGE_LINUX_GLIBC_2_17_X64: v67809676-c3ba6add
+  CI_IMAGE_LINUX_GLIBC_2_17_X64_SUFFIX: "_test_only"
+  CI_IMAGE_LINUX_GLIBC_2_23_ARM64: v67809676-c3ba6add
+  CI_IMAGE_LINUX_GLIBC_2_23_ARM64_SUFFIX: "_test_only"
+  CI_IMAGE_RPM_X64: v67809676-c3ba6add
+  CI_IMAGE_RPM_X64_SUFFIX: "_test_only"
+  CI_IMAGE_RPM_ARM64: v67809676-c3ba6add
+  CI_IMAGE_RPM_ARM64_SUFFIX: "_test_only"
+  CI_IMAGE_RPM_ARMHF: v67809676-c3ba6add
+  CI_IMAGE_RPM_ARMHF_SUFFIX: "_test_only"
+  CI_IMAGE_WIN_LTSC2022_X64: v67809676-c3ba6add
+  CI_IMAGE_WIN_LTSC2022_X64_SUFFIX: "_test_only"
 
   DATADOG_AGENT_EMBEDDED_PATH: /opt/datadog-agent/embedded
   DEB_GPG_KEY_ID: c0962c7d
