--- a/renovate.json
+++ b/renovate.json
@@ -87,7 +87,7 @@
       "windows": {
         "defaultRegistryUrlTemplate": "https://hub.docker.com/v2/namespaces/datadog/repositories/agent-buildimages-windows_x64/tags",
         "transformTemplates": [
-          "{\"releases\": $map(results, function($v) { {\"version\": $replace($replace($v.name, \"lstc2022-\", \"\"), \"lstc2022\", \"latest\"), \"releaseTimestamp\": $v.last_updated, \"digest\": $v.digest } }) }"
+          "{\"releases\": $map(results, function($v) { {\"version\": $v.name, \"releaseTimestamp\": $v.last_updated } }) }"
         ]
       }
     }
